--- a/index.html
+++ b/index.html
@@ -23,7 +23,55 @@
 
         <!-- parte centrale -->
         <main>
-            
+            <section>
+                <img class="photo" src="img/tim-1.jpg" alt="tim1">
+                <img class="photo" src="img/tim-2.jpg" alt="tim2">
+                <span id="description">1st Photo: John S. and James L. 
+                    <br> 2nd Photo: Wikimedia
+                </span>
+            </section>
+
+            <section>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus suscipit illo repellat. Nam, <span class="text-yellow">aperiam aut enim reiciendis voluptas nulla</span>. Debitis tempora fuga corporis nobis ex consequuntur molestias aspernatur sequi vero!
+                </p>
+
+                <ul>
+                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                </ul>
+            </section>
+
+            <section>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="color-table">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint, quasi tempora architecto nulla dolores optio. Error, temporibus eveniet. Provident repellendus architecto veritatis quaerat officiis consectetur omnis sed porro quia repudiandae.</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque dolor ea perspiciatis? Suscipit blanditiis voluptate veniam laudantium repellendus minima, amet quam praesentium dolor totam et iure architecto error consequatur molestias?</td>
+                        </tr>
+                        <tr class="color-table">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta sapiente eaque neque harum sequi fugit animi facilis optio. Modi accusantium asperiores unde autem quos laboriosam ut, blanditiis animi veritatis corrupti?</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+
         </main>
 
         <!-- footer -->
