--- a/index.html
+++ b/index.html
@@ -70,13 +70,17 @@
                         </tr>
                     </tbody>
                 </table>
+
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit, accusamus magni autem voluptate, <span class="text-yellow"> soluta nostrum sapiente nihil unde veniam repellat </span> dolorem ex aperiam ut officia doloribus ratione totam suscipit maiores!</p>
             </section>
 
         </main>
 
         <!-- footer -->
         <footer>
-
+            <span>Potrebbero interessarti</span>
+            <div><img src="img/monitor.jpg" alt="monitor"></div>
+            <div><img src="img/graph.jpg" alt="graph"></div>
         </footer>
     </div>
 </body>
